# trade

backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: accounts.py  futures.py  market.py
backend/app/core/: config.py  crypto.py  database.py  logging.py
backend/app/gateways/: __init__.py  base.py  binance.py  simulated.py
backend/app/models/: __init__.py  account.py  account_credential.py  balance.py  fill.py  ledger_entry.py  order.py  position.py  strategy_run.py  system_event.py
backend/app/schemas/: __init__.py
backend/app/services/: market_data.py  matching.py  portfolio.py  risk.py  trading.py
backend/tests/: conftest.py  test_idempotency.py  test_orders.py  test_positions.py  test_symbol_filters.py
backend/um_futures_sim_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: um_futures_sim_trading_design.md  um_futures_sim_trading_frontend_design.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: accounts.ts  client.ts  futures.ts
frontend/src/context/: SelectedAccount.tsx  ThemeContext.tsx
frontend/src/hooks/: useAccounts.ts  useMarketPrice.ts  usePositions.ts  useTrading.ts
frontend/src/pages/: AccountPage.tsx  DashboardPage.tsx  OrdersPage.tsx  TradePage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: clientOrderId.ts  format.ts
(+21 files in other folders)
