[project]
name = "um-futures-sim-trading"
version = "0.1.0"
description = "Binance USD-M Futures simulated trading system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "cryptography>=42.0.5",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
